# flowmatching_lthc

./: .gitattributes  .gitignore  ENVIRONMENT.txt  LICENSE  README.md  pyproject.toml
bench/: benchmark_lthc_v2.py
configs/: lthc_b4_velocity_imagenet256.json
docs/: kernel_note.md  model.md  triton_kernels.md
docs/assets/: draw_lthc_architecture.py
docs/figures/: lthc_forward_projection3d.tex
flowmatching_lthc/: imagenet.py
flowmatching_lthc/models/: __init__.py  jit_shared_adaln.py  kernel_note.md  local_thc.py  local_thc_triton_kernels.py
flowmatching_lthc/models/lthc_v2/: __init__.py  model.py
flowmatching_lthc/optim/: muon.py
imaget_lthc/: __init__.py  checkpoint.py  imagenet.py  sampling.py
imaget_lthc/models/: __init__.py  jit_shared_adaln.py  kernel_note.md  local_thc.py  local_thc_triton_kernels.py
imaget_lthc/optim/: __init__.py  muon.py
results/lthc_patch4_ema50k/: combined_metrics.csv  feature_fd.csv  feature_fd_dinov2_giant_reg.csv  feature_fd_siglip2_giant_opt.csv  fid_is.csv
scripts/: convert_checkpoint_keys.py  evaluate_feature_fd.py  evaluate_feature_fd_sharded.py  evaluate_fid.py  inference.py  launch_lthc_b4_velocity_8gpu.sh  run_lthc_checkpoint_sweep_eval.py  sample_checkpoint.py  score_existing_samples.py  train_imagenet256.py
