[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowmatching-lthc"
version = "0.1.0"
description = "Local Token Hyper-Connection flow-matching diffusion model"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.4",
  "torchvision",
  "triton",
  "numpy",
  "pillow",
  "wandb",
]

[tool.setuptools.packages.find]
include = ["flowmatching_lthc*", "imaget_lthc*"]
